--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>We are ready to help you build and also realize the room design that you dream of, with our experts and also the best category recommendations from us</p>
                 <div class="p-list">
                     <p>Modern</p>
-                    <img src="vector/mins.svg">
+                    <img src="vector/minus.svg">
                 </div>
                 <p class="light-black-font">Modern design is a term in the design world that refers to a house with a clean design, simple color choices, the use of materials including metal, glass, and steel, and is usually accompanied by clean lines.</p>
                 <div class="p-list">
