--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
             <p class="set-center-title title-black-font" style="margin-bottom: 0;"><strong>FEATURED PRODUCT</strong></p>
 
             <div class="product-item">
-                <img class="product-picture" src="asset/product1.jpg">
+                <div class="bg-product">
+                    <img class="product-picture" src="asset/product1.jpg">
+                </div>
+
                 <div>
                     <p class="medium-black-font">Product</p>
                     <p class="gray-font">Catagory</p>
