--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
             <div class="image-container-1">
                 <img id="img1" src="asset/img1.jpg">
             </div>
-            <img id="line" src="vector/line.svg">
+
+            <div class="image-line">
+                <img id="line" src="asset/line.jpg">
+            </div>
+
             <div id="visualize-content" class="content">
                 <p id="visual-title" class="title-black-font"><strong>Visualize your ideas with us</strong></p>
                 <p>We are ready to help you build and also realize the room design that you dream of, with our experts and also the best category recommendations from us</p>
